# CoACD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3rd/triangle/: CDT.h  CDT.hpp  CDTUtils.h  CDTUtils.hpp  KDTree.h  LocatorKDTree.h  Triangulation.h  Triangulation.hpp  portable_nth_element.hpp  predicates.h  remove_at.hpp  triangle.h
public/: coacd.cpp  coacd.h
src/: cache.h  clip.cpp  clip.h  cost.cpp  hausdorff.h  intersection.h  logger.h  mcts.cpp  mcts.h  model_obj.cpp  model_obj.h  nanoflann.hpp  pair.h  preprocess.cpp  preprocess.h  process.cpp  process.h  shape.cpp  shape.h  vec3.h
src/btConvexHull/: btAlignedObjectArray.h  btConvexHullComputer.cpp  btConvexHullComputer.h
src/hash/: HashMap.h  HashSet.h  unordered_dense.h
src/quickhull/: ConvexHull.hpp  HalfEdgeMesh.hpp
src/quickhull/Structs/: Mesh.hpp
